--- a/D3DMeshConverter/JPAssetReader.csproj
+++ b/D3DMeshConverter/JPAssetReader.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{C706265D-83CA-45D1-9F69-E801284ACA7B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>JPMeshConverter</RootNamespace>
-    <AssemblyName>JPMeshConverter</AssemblyName>
+    <RootNamespace>JPAssetReader</RootNamespace>
+    <AssemblyName>JPAssetReader</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <IsWebBootstrapper>false</IsWebBootstrapper>
@@ -56,6 +56,8 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\Common.cs" />
+    <Compile Include="Helpers\Matrix.cs" />
     <Compile Include="Reader\ByteReader.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -68,9 +70,11 @@
     <Compile Include="Reader\JurassicReader.cs" />
     <Compile Include="Reader\LanguageReader.cs" />
     <Compile Include="Reader\Mesh.cs" />
-    <Compile Include="Helpers\ModelFileDialog.cs" />
+    <Compile Include="Helpers\AssetFileDialog.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reader\PropReader.cs" />
+    <Compile Include="Reader\SceneReader.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
